# termlog

./: .coveragerc  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  .vshrc  AUTHORS  CHANGES.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  Makefile  README.rst  entrypoints.txt  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  setup.py  tox.ini
.github/workflows/: create-source-release.yml  stable.yml  unstable.yml  validate-package-on-commit.yml
docs/source/: api.rst  conf.py  index.rst  installation.rst  usage.rst
requirements/: debug.txt  docs.txt  test.txt
scripts/: benchmark.py  build.py  check.py  clean.py  demo.py  lint.py  push.py  release.py  requirements.txt  test.py
termlog/: __init__.py  __metadata__.py  api.py  colors.py  config.py  constants.py  decorations.py  echo.py  formatting.py  interpret.py  message.py  palettes.py  styles.py  terminal.py
termlog/tests/: README.md  test_beautify.py  test_colors.py  test_echo.py  test_interpret.py  test_message.py  test_set_config.py  test_strip_escape.py  test_true_color_support.py
tests/: README.md  test_embedded_calls.py  test_multi_layer.py  test_multi_line.py  test_release_updates.py  test_version_matches.py
