[tool.poetry]
name = "termlog"
version = "1.3.0"
description = "A Terminal logging library"
authors = ["Brian Bruggeman <Brian.M.Bruggeman@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pygments = "^2.6.1"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
mypy = "^0.782"
isort = "^5.4.2"
black = "^19.10b0"
pytest-isort = "^1.1.0"
pytest-xdist = "^2.0.0"
pytest-mypy = "^0.6.2"
coverage = "^5.2.1"
pytest-cov = "^2.10.1"
pytest-black = "^0.3.10"

[tool.isort]
line_length = 140
indent = '    '
include_trailing_comma = true
multi_line_output = 3
length_sort = false
combine_star = true
known_third_party = "pytest"
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
skip_glob = '''
    ./*.py
    setup.py
    termlog/__init__.py
    __*.py
    __pycache__
    .pytest_cache
    .git
    .tox
    .eggs
    *.egg-info
    docs
    vendored
'''

[tool.coverage.run]
branch = true
omit = [
    "setup.py","*/__*.py","tests/*","**/tests/*","*vendored"
]
source = ["termlog", "tests"]

[tool.coverage.html]
directory = "docs/_build/html/"


[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "def __dir__",
    "if __name__ == __main__.:",
]

[tool.black]
line-length = 140
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
(
    /(
        \.eggs        # exclude the top level egg packages when installed
     |  \.git         # exclude dvcs
     |  \.mypy_cache  # exclude mypy artifacts
     |  \.venv        # exclude localized virtual environment if exists
     | build          # exclude build artifacts
     | dist           # exclude distribution

   )/
)
'''


[tools.pytest]
filterwarnings = '''
# requests and sqlalchemy incorrectly use the modern collections.abc
    ignore::DeprecationWarning
'''

timeout = 300

testpaths = '''
    # Include package
    termlog
    # Scripts are used during release and should be tested
    scripts
    # Currently, tests are found under just /tests
    tests
'''

# These options _can_ be overridden on the command-line invocation.
addopts = '''
    # ----- Reporting -----
    # Reduce spam
    -p no:logging
    # Reduce more spam
    -q
'''

# Ignore files/tests under these paths
norecursedirs = '''
    # generated from pip install
    *.egg
    .eggs
    # generated from pip install -e .
    *.egg-info
    # generated by flake8 and isort during pytest
    .cache
    # repo ingestion
    .git
    # generated during execution
    __pycache__
    # generated during python setup.py build
    build
    # generated during python setup.py sdist bdist_wheel
    dist*
    # don't "test" docs
    docs
    # pytest build artifacts
    .pytest_cache
    # 3rd party non-tested code
    vendored
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
